@@ -27,7 +27,7 @@ setup(name='collective.megaphone',
           'setuptools',
           'z3c.form>=1.9.0',
           'plone.z3cform>=0.5.3',
-          'plone.app.z3cform',
+          'plone.app.z3cform>=0.4.9',
           'Products.PloneFormGen>=1.5.0',
           'collective.jqueryui',
           'collective.z3cform.wizard>=1.0b2',
