@@ -204,61 +204,61 @@ class FormFieldsStep(wizard.Step, crud.CrudForm):
         fields = {
             'body': {
                 'field_type': 'text',
-                'title': utranslate(DOMAIN, _(u'Letter Body')),
-                'description': utranslate(DOMAIN, _(u'A salutation and signature will be added automatically.')),
-                'default': utranslate(DOMAIN, _(u'Enter the body of your letter here.  A salutation and signature will be added automatically.')),
+                'title': utranslate(DOMAIN, _(u'Letter Body'), context=self.request),
+                'description': utranslate(DOMAIN, _(u'A salutation and signature will be added automatically.'), context=self.request),
+                'default': utranslate(DOMAIN, _(u'Enter the body of your letter here.  A salutation and signature will be added automatically.'), context=self.request),
                 'required': True,
                 'order': 0,
                 },
             'sincerely': {
                 'field_type': 'label',
-                'title': utranslate(DOMAIN, _(u'Sincerely,')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'Sincerely,'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': False,
                 'order': 1,
                 },
             'first': {
-                'title': utranslate(DOMAIN, _(u'First Name')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'First Name'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': True,
                 'order': 2,
                 },
             'last': {
-                'title': utranslate(DOMAIN, _(u'Last Name')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'Last Name'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': True,
                 'order': 3,
                 },
             'email': {
-                'title': utranslate(DOMAIN, _(u'E-mail Address')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'E-mail Address'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': True,
                 'validator': 'isEmail',
                 'order': 4,
                 },
             'street': {
-                'title': utranslate(DOMAIN, _(u'Street Address')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'Street Address'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': False,
                 'order': 5,
                 },
             'city': {
-                'title': utranslate(DOMAIN, _(u'City')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'City'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': False,
                 'order': 6,
                 },
             'state': {
                 'field_type': 'selection',
-                'title': utranslate(DOMAIN, _(u'State')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'State'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': False,
                 'vocab': STATES,
                 'order': 7,
                 },
             'zip': {
-                'title': utranslate(DOMAIN, _(u'Postal Code')),
-                'description': utranslate(DOMAIN, _(u'')),
+                'title': utranslate(DOMAIN, _(u'Postal Code'), context=self.request),
+                'description': utranslate(DOMAIN, _(u''), context=self.request),
                 'required': False,
                 'validator': 'isZipCode',
                 'order': 8,
@@ -268,8 +268,8 @@ class FormFieldsStep(wizard.Step, crud.CrudForm):
         if HAS_CAPTCHA:
             fields['captcha'] = {
                 'field_type': 'captcha',
-                'title': utranslate(DOMAIN, _(u'Please enter this text.')),
-                'description': utranslate(DOMAIN, _(u'This helps prevent spammers from using this form.')),
+                'title': utranslate(DOMAIN, _(u'Please enter this text.'), context=self.request),
+                'description': utranslate(DOMAIN, _(u'This helps prevent spammers from using this form.'), context=self.request),
                 'required': True,
                 'order': 9,
                 }
