@@ -303,9 +303,14 @@ Second, the thank-you e-mail to the sender.
   '<html ...Thank you H&auml;rvey...</html>\n'
 
 Also, the letters should have been recorded in the savedata adapter. Even for
-the recipient who wasn't configured with an e-mail address.
-  >>> list(sda._inputStorage.values())
-  [['', 'This is the letter.', 'H\xc3\xa4rvey', 'Frank', 'harveyfrank@example.com', '', '', '', '', '', 'True', '', 'Dear Senator Ron Wyden,\n Hello. Newsletter: 1', '[not provided]', '1234'], ['boe-obama', 'This is the letter.', 'H\xc3\xa4rvey', 'Frank', 'harveyfrank@example.com', '', '', '', '', '', 'True', '', 'Dear First Dog B\xc3\xb6 Obama,\n Hello. Newsletter: 1', '[not provided]', '1234']]
+the recipient who wasn't configured with an e-mail address.  We have to check
+two variants of the first column (normalized name) because the default
+normalization changed in Plone 4.
+  >>> stored_values = list(sda._inputStorage.values())
+  >>> ['', 'This is the letter.', 'H\xc3\xa4rvey', 'Frank', 'harveyfrank@example.com', '', '', '', '', '', 'True', '', 'Dear Senator Ron Wyden,\n Hello. Newsletter: 1', '[not provided]', '1234'] in stored_values
+  True
+  >>> ['boe-obama', 'This is the letter.', 'H\xc3\xa4rvey', 'Frank', 'harveyfrank@example.com', '', '', '', '', '', 'True', '', 'Dear First Dog B\xc3\xb6 Obama,\n Hello. Newsletter: 1', '[not provided]', '1234'] in stored_values or ['bo-obama', 'This is the letter.', 'H\xc3\xa4rvey', 'Frank', 'harveyfrank@example.com', '', '', '', '', '', 'True', '', 'Dear First Dog B\xc3\xb6 Obama,\n Hello. Newsletter: 1', '[not provided]', '1234'] in stored_values
+  True
 
 Users with the 'PloneFormGen: Download Saved Input' permission will see a
 portlet indicating the number of letters that have been sent.
